--- a/data/interfaces/default/library.html
+++ b/data/interfaces/default/library.html
@@ -690,7 +690,8 @@ DOCUMENTATION :: END
             },
             complete: function(xhr, status) {
                 $("#library-recently-watched").html(xhr.responseText);
-                highlightWatchedScrollerButton();
+                highlightScrollerButton("#recently-watched");
+                paginateScroller("#recently-watched", ".paginate-watched");
             }
         });
     }
@@ -706,7 +707,8 @@ DOCUMENTATION :: END
             },
             complete: function(xhr, status) {
                 $("#library-recently-added").html(xhr.responseText);
-                highlightAddedScrollerButton();
+                highlightScrollerButton("#recently-added");
+                paginateScroller("#recently-added", ".paginate-added");
             }
         });
     }
@@ -716,82 +718,7 @@ DOCUMENTATION :: END
     recentlyAdded();
     % endif
 
-    function highlightWatchedScrollerButton() {
-        var scroller = $("#recently-watched-row-scroller");
-        var numElems = scroller.find("li").length;
-        scroller.width(numElems * 175);
-        if (scroller.width() > $("#library-recently-watched").width()) {
-            $("#recently-watched-page-right").removeClass("disabled");
-        } else {
-            $("#recently-watched-page-right").addClass("disabled");
-        }
-    }
-
-    function highlightAddedScrollerButton() {
-        var scroller = $("#recently-added-row-scroller");
-        var numElems = scroller.find("li").length;
-        scroller.width(numElems * 175);
-        if (scroller.width() > $("#library-recently-added").width()) {
-            $("#recently-added-page-right").removeClass("disabled");
-        } else {
-            $("#recently-added-page-right").addClass("disabled");
-        }
-    }
-
-    $(window).resize(function() {
-        highlightWatchedScrollerButton();
-        highlightAddedScrollerButton();
-    });
-
     $('div.art-face').animate({ opacity: 0.2 }, { duration: 1000 });
-
-    $(".paginate-watched").click(function (e) {
-        e.preventDefault();
-        var scroller = $("#recently-watched-row-scroller");
-        var scrollerParent = scroller.parent();
-        var containerWidth = $("#library-recently-watched").width();
-        var scrollCurrent = scrollerParent.scrollLeft();
-        var scrollAmount = $(this).data("id") * parseInt(containerWidth / 175) * 175;
-        var scrollMax = parseInt(scroller.width()) - Math.abs(scrollAmount);
-        var scrollTotal = Math.min(scrollCurrent + scrollAmount, scrollMax);
-        scrollerParent.animate({ scrollLeft: scrollTotal }, 250);
-
-        if (scrollTotal == 0) {
-            $("#recently-watched-page-left").addClass("disabled").blur();
-        } else {
-            $("#recently-watched-page-left").removeClass("disabled");
-        }
-
-        if (scrollTotal == scrollMax) {
-            $("#recently-watched-page-right").addClass("disabled").blur();
-        } else {
-            $("#recently-watched-page-right").removeClass("disabled");
-        }
-    });
-
-    $(".paginate-added").click(function (e) {
-        e.preventDefault();
-        var scroller = $("#recently-added-row-scroller");
-        var scrollerParent = scroller.parent();
-        var containerWidth = $("#library-recently-added").width();
-        var scrollCurrent = scrollerParent.scrollLeft();
-        var scrollAmount = $(this).data("id") * parseInt(containerWidth / 175) * 175;
-        var scrollMax = parseInt(scroller.width()) - Math.abs(scrollAmount);
-        var scrollTotal = Math.min(scrollCurrent + scrollAmount, scrollMax);
-        scrollerParent.animate({ scrollLeft: scrollTotal }, 250);
-
-        if (scrollTotal == 0) {
-            $("#recently-added-page-left").addClass("disabled").blur();
-        } else {
-            $("#recently-added-page-left").removeClass("disabled");
-        }
-
-        if (scrollTotal == scrollMax) {
-            $("#recently-added-page-right").addClass("disabled").blur();
-        } else {
-            $("#recently-added-page-right").removeClass("disabled");
-        }
-    });
 
     $(document).ready(function () {
 
