--- a/data/interfaces/default/export_modal.html
+++ b/data/interfaces/default/export_modal.html
@@ -20,6 +20,7 @@ DOCUMENTATION :: END
     export = exporter.Export()
     thumb_media_types = ', '.join([export.PLURAL_MEDIA_TYPES[k] for k, v in export.MEDIA_TYPES.items() if v[0]])
     art_media_types = ', '.join([export.PLURAL_MEDIA_TYPES[k] for k, v in export.MEDIA_TYPES.items() if v[1]])
+    logo_media_types = ', '.join([export.PLURAL_MEDIA_TYPES[k] for k, v in export.MEDIA_TYPES.items() if v[2]])
 %>
 <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -144,6 +145,22 @@ DOCUMENTATION :: END
                         Select the level to export background artwork image files.<br>Note: Only applies to ${art_media_types}.
                     </p>
                 </div>
+                <div class="form-group">
+                    <label for="export_logo_level">Logo Image Export Level</label>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <select class="form-control" id="export_logo_level" name="export_logo_level">
+                                <option value="0" selected>Level 0 - None / Custom</option>
+                                <option value="1">Level 1 - Uploaded and Selected Logos Only</option>
+                                <option value="2">Level 2 - Selected and Locked Logos Only</option>
+                                <option value="9">Level 9 - All Selected Logos</option>
+                            </select>
+                        </div>
+                    </div>
+                    <p class="help-block">
+                        Select the level to export logo image files.<br>Note: Only applies to ${logo_media_types}.
+                    </p>
+                </div>
                 <p class="help-block">
                     Warning: Exporting images may take a long time! Images will be saved to a folder alongside the data file.
                 </p>
@@ -231,6 +248,7 @@ DOCUMENTATION :: END
             $('#export_media_info_level').prop('disabled', true);
             $("#export_thumb_level").prop('disabled', true);
             $("#export_art_level").prop('disabled', true);
+            $("#export_logo_level").prop('disabled', true);
             export_custom_metadata_fields.disable();
             export_custom_media_info_fields.disable();
         } else {
@@ -238,6 +256,7 @@ DOCUMENTATION :: END
             $('#export_media_info_level').prop('disabled', false);
             $("#export_thumb_level").prop('disabled', false);
             $("#export_art_level").prop('disabled', false);
+            $("#export_logo_level").prop('disabled', false);
             export_custom_metadata_fields.enable();
             export_custom_media_info_fields.enable();
         }
@@ -252,6 +271,7 @@ DOCUMENTATION :: END
         var file_format = $('#export_file_format option:selected').val();
         var thumb_level = $("#export_thumb_level option:selected").val();
         var art_level = $("#export_art_level option:selected").val();
+        var logo_level = $("#export_logo_level option:selected").val();
         var custom_fields = [
             $('#export_custom_metadata_fields').val(),
             $('#export_custom_media_info_fields').val()
@@ -270,6 +290,7 @@ DOCUMENTATION :: END
                 file_format: file_format,
                 thumb_level: thumb_level,
                 art_level: art_level,
+                logo_level: logo_level,
                 custom_fields: custom_fields,
                 export_type: export_type,
                 individual_files: individual_files
