--- a/data/interfaces/default/graphs.html
+++ b/data/interfaces/default/graphs.html
@@ -332,7 +332,7 @@
             'Direct Stream': '#FFFFFF',
             'Transcode': '#F06464',
             'Max. Concurrent Streams': '#96C83C',
-            'Total': '#F06464'
+            'Total': '#96C83C'
         };
         var series_colors = [];
         $.each(data_series, function(index, series) {
